# fuzzy_cognitive_model

./: README.md  fuzzy_cognitive_model.code-workspace  vscode.code-workspace
api/: .env.example  .gitignore  Cargo.toml
api/locales/: en-US.yml  ru-RU.yml
api/migrations/2022-12-20-110420_add_users/: up.sql
api/migrations/2022-12-20-110420_create_users/: down.sql  up.sql
api/migrations/2022-12-27-072134_create_sessions/: up.sql
api/migrations/2023-01-04-063055_create_sessions/: up.sql
api/migrations/2023-02-13-052031_create_password_resets/: up.sql
api/migrations/2023-02-19-202836_create_projects/: down.sql  up.sql
api/migrations/2023-03-19-124158_create_model/: down.sql  up.sql
api/migrations/2023-04-06-203813_create_control_vertices/: down.sql  up.sql
api/migrations/2023-04-16-220238_create_target_concepts/: down.sql  up.sql
api/migrations/2023-04-18-080718_create_control_connections/: down.sql  up.sql
api/migrations/2023-04-18-105148_create_concept_constraints/: down.sql  up.sql
api/migrations/2023-04-23-094126_create_connection_constrains/: down.sql
api/migrations/2023-04-23-150614_create_adjustment/: down.sql  up.sql
api/migrations/2023-04-23-190052_create_plugin_dependencies/: down.sql  up.sql
api/migrations/2023-04-25-145321_create_model_copies/: down.sql  up.sql
api/migrations/2023-04-25-173701_create_adjustment_runs/: down.sql  up.sql
api/seed/: permissions.sql  plugins.sql  project_permissions.sql
api/src/: cookies.rs  db.rs  errors.rs  lib.rs  locale.rs  main.rs  models.rs  pagination.rs  plugins.rs  request.rs  request_guards.rs  response.rs  routes.rs  schema.rs  services.rs  storage.rs  types.rs  utils.rs  web_socket.rs  ws.rs
api/src/plugins/: adjustment.rs  concept_constraints.rs  control_concepts.rs  control_connections.rs  control_vertices.rs  target_concepts.rs
api/src/plugins/adjustment/: models.rs  routes.rs  services.rs  types.rs
api/src/plugins/adjustment/services/: adjustment_out_services.rs  adjustment_run_services.rs  adjustment_save_result_services.rs  adjustment_services.rs  concept_dynamic_model_services.rs  permission_services.rs
api/src/plugins/concept_constraints/: models.rs  routes.rs  services.rs  types.rs
api/src/plugins/connection_constraints/: routes.rs  services.rs
api/src/plugins/control_concepts/: models.rs  routes.rs  services.rs  types.rs
api/src/plugins/control_connections/: routes.rs  services.rs
api/src/plugins/control_vertices/: models.rs  routes.rs  services.rs  types.rs
api/src/plugins/target_concepts/: models.rs  routes.rs  services.rs  types.rs
api/src/routes/: model_routes.rs  project_routes.rs  user_routes.rs  users_routes.rs
api/src/services/: email_confirmation_services.rs  mailing_services.rs  model_services.rs  password_services.rs  permission_services.rs  plugin_services.rs  project_services.rs  project_user_services.rs  session_services.rs  user_services.rs  users_services.rs
api/src/web_socket/: listener.rs  project_service.rs  service.rs  web_socket_listener.rs  web_socket_project_service.rs
docs/: charts.xlsx  description.docx  dialogue graph.vsdx  dissertation.docx  flowcharts.vsdx  modular structure.vsdx  presentation.pptx  presentation_charts.xlsx  use case diagram.vsdx  ~$scription.docx  ~$ssertation.docx
rust/: Cargo.toml
rust/api/: Cargo.toml
rust/api/locales/: en-US.yml  ru-RU.yml
rust/api/migrations/2022-12-20-110420_create_users/: up.sql
rust/api/migrations/2023-02-19-202836_create_projects/: down.sql
rust/api/migrations/2023-03-19-124158_create_model/: down.sql
rust/api/migrations/2023-04-16-220238_create_target_concepts/: up.sql
rust/api/migrations/2023-04-23-094126_create_connection_constrains/: up.sql
rust/api/migrations/2023-04-25-173701_create_adjustment_runs/: down.sql  up.sql
rust/api/seed/: permissions.sql  plugin_dependencies.sql  plugins.sql
rust/api/src/: cookies.rs  lib.rs  locale.rs  main.rs  models.rs  pagination.rs  plugins.rs  request.rs  response.rs  routes.rs  schema.rs  storage.rs  types.rs  utils.rs  web_socket.rs
rust/api/src/plugins/: connection_constraints.rs  control_concepts.rs  target_concepts.rs
rust/api/src/plugins/adjustment/: models.rs  routes.rs  services.rs  types.rs
rust/api/src/plugins/adjustment/services/: adjustment_out_services.rs  adjustment_save_result_services.rs  adjustment_services.rs  concept_dynamic_model_services.rs
rust/api/src/plugins/concept_constraints/: routes.rs  services.rs
rust/api/src/plugins/connection_constraints/: models.rs  routes.rs  services.rs  types.rs
rust/api/src/plugins/control_concepts/: models.rs  routes.rs  services.rs  types.rs
rust/api/src/plugins/control_connections/: models.rs  routes.rs  services.rs  types.rs
rust/api/src/plugins/target_concepts/: models.rs  routes.rs  services.rs  types.rs
rust/api/src/routes/: model_routes.rs  project_routes.rs  user_routes.rs
rust/api/src/services/: email_confirmation_services.rs  filter_services.rs  mailing_services.rs  model_services.rs  password_services.rs  plugin_services.rs  project_services.rs  project_user_services.rs  session_services.rs  user_services.rs
rust/api/src/web_socket/: adjustment_run_service.rs  listener.rs  model_service.rs  project_service.rs
rust/common/: Cargo.toml
rust/common/src/: adjustment.rs  lib.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: adjustment.rs  lib.rs
server/: Cargo.toml
web/: .env.example  .eslintrc.js  .prettierrc  app.vue  nuxt.config.ts  package.json  tailwind.config.js
web/.husky/: commit-msg
web/components/: AddProjectForm.vue  BaseBreadcrumbs.vue  BaseButton.vue  BaseCheckbox.vue  BaseFileInput.vue  BaseForm.vue  BaseModalForm.vue  BaseTextArea.vue  BaseTextField.vue  TableDeleteButton.vue  TheAppBar.vue  TheAvatarMenu.vue  TheFooter.vue  TheGlobalMessage.vue  TheGlobalNotification.vue  TheHeader.vue  TheLocaleMenu.vue
web/composables/: api-helpers.ts  api.ts  fetch-result.ts  index.ts  message.ts  messages.ts  model-actions.ts  model.ts  notification.ts  pagination.ts
web/layouts/: default.vue  editor.vue  model.vue
web/store/: user.ts  (+6 more)
(+104 files in other folders)
