[package]
name = "fuzzy_cognitive_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json", "secrets"] }
diesel = { version = "2.0.0", features = ["postgres", "serde_json"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
dotenvy = "0.15.6"
schemars = "0.8.11"
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
argon2 = "0.4.1"
rand_core = { version = "0.6.4", features = ["std"] }
pathdiff = "0.2.1"
path-slash = "0.2.1"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
