[package]
name = "fuzzy_cognitive_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.155", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json", "secrets"] }
diesel = { version = "2.0.3", features = ["postgres", "serde_json", "chrono", "network-address"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
dotenvy = "0.15.6"
schemars = { version = "0.8.12", features = ["chrono"] }
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
argon2 = "0.5.0"
rand_core = { version = "0.6.4", features = ["std"] }
pathdiff = "0.2.1"
path-slash = "0.2.1"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4.23", features = ["serde"] }
ipnetwork = "0.20.0"
user-agent-parser = "0.3.4"
tokio = { version = "1.26.0", features = ["full"] }
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "r2d2", "builder"] }
hmac = "0.12.1"
sha2 = "0.10.6"
jwt = "0.16.0"
rocket-accept-language = "0.8.2"
once_cell = "1.17.1"
rust-i18n = "1.1.4"
tokio-tungstenite = "0.18.0"
futures-util = "0.3.27"
futures-channel = "0.3.27"
cookie = { version = "0.17.0", features = ["private", "percent-encode"] }
binascii = "0.1.4"

[package.metadata.i18n]
available-locales = ["en-US", "ru-RU"]
default-locale = "en-US"
